tests/expectations/compiler/tuple/access_out_of_bounds_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372024]: Tuple index `2` out of range for a tuple with length `2`
    --> compiler-test:7:24
     |
   7 |         return (t.0, t.2); // Index `t.2` is out of bounds.
     |                        ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
